# Agentic_LLM

./: .gitignore  README.md  agents.dockerfile  agents.py  config.py  create_index.py  dotenv-0.0.5-py3-none-any.whl  embeddings.py  llm.py  main.py  prompts.py  pyproject.toml  readme.md  speech_to_text.py  test.py  text_to_speech.py  text_to_speech_bis.py  tools.py
faiss_index/: index.faiss  index.pkl
